--- a/Map.Android/Map.Android.csproj
+++ b/Map.Android/Map.Android.csproj
@@ -70,6 +70,9 @@
     <PackageReference Include="Xamarin.Build.Download">
       <Version>0.11.4</Version>
     </PackageReference>
+    <PackageReference Include="Xamarin.Essentials">
+      <Version>1.8.1</Version>
+    </PackageReference>
     <PackageReference Include="Xamarin.Forms.Maps">
       <Version>5.0.0.2622</Version>
     </PackageReference>
