--- a/DebugLog/DebugLog.csproj
+++ b/DebugLog/DebugLog.csproj
@@ -1,13 +1,9 @@
-<Project Sdk="Microsoft.NET.Sdk">
-
+<Project Sdk="Microsoft.NET.Sdk" ProjectGUID="fa013e6a-4f3f-4d25-9e7d-138d4bf9e119">
   <PropertyGroup>
     <TargetFramework>netstandard2.0</TargetFramework>
-    
   </PropertyGroup>
-
   <ItemGroup>
     <PackageReference Include="Newtonsoft.Json" Version="13.0.3" />
     <PackageReference Include="Xamarin.Essentials" Version="1.8.1" />
   </ItemGroup>
-
 </Project>
