Developoing main page

--- a/DestoPesto/DestoPesto/DestoPesto.csproj
+++ b/DestoPesto/DestoPesto/DestoPesto.csproj
@@ -163,12 +163,18 @@
     <None Remove="Images\logo_landscape_blue_back1.png" />
     <None Remove="Images\mail.png" />
     <None Remove="Images\map.png" />
+    <None Remove="Images\more-100.png" />
+    <None Remove="Images\more-50.png" />
+    <None Remove="Images\more.png" />
     <None Remove="Images\password.png" />
     <None Remove="Images\phone.png" />
     <None Remove="Images\pin.png" />
     <None Remove="Images\pin_drop.png" />
     <None Remove="Images\ReviewSub.png" />
     <None Remove="Images\settings.png" />
+    <None Remove="Images\share-120.png" />
+    <None Remove="Images\share-60.png" />
+    <None Remove="Images\share.png" />
     <None Remove="Images\twitter.png" />
     <None Remove="Images\user.png" />
     <None Remove="Images\user_blue.png" />
@@ -194,6 +200,10 @@
     <EmbeddedResource Include="Images\facebook.png" />
     <EmbeddedResource Include="Images\google_logo.png" />
     <EmbeddedResource Include="Images\icon.png" />
+    <EmbeddedResource Include="Images\more-100.png" />
+    <EmbeddedResource Include="Images\more-50.png" />
+    <EmbeddedResource Include="Images\share-120.png" />
+    <EmbeddedResource Include="Images\share-30.png" />
     <EmbeddedResource Include="Images\iconSplash.png" />
     <EmbeddedResource Include="Images\icon_about.png" />
     <EmbeddedResource Include="Images\icon_feed.png" />
@@ -206,12 +216,15 @@
     <EmbeddedResource Include="Images\logo_landscape_blue_back.png" />
     <EmbeddedResource Include="Images\mail.png" />
     <EmbeddedResource Include="Images\map.png" />
+    <EmbeddedResource Include="Images\more.png" />
     <EmbeddedResource Include="Images\password.png" />
     <EmbeddedResource Include="Images\phone.png" />
     <EmbeddedResource Include="Images\pin.png" />
     <EmbeddedResource Include="Images\pin_drop.png" />
     <EmbeddedResource Include="Images\ReviewSub.png" />
     <EmbeddedResource Include="Images\settings.png" />
+    <EmbeddedResource Include="Images\share-60.png" />
+    <EmbeddedResource Include="Images\share.png" />
     <EmbeddedResource Include="Images\twitter.png" />
     <EmbeddedResource Include="Images\user.png" />
     <EmbeddedResource Include="Images\user_blue.png" />
