--- a/DestoPesto/DestoPesto.Android/DestoPesto.Android.csproj
+++ b/DestoPesto/DestoPesto.Android/DestoPesto.Android.csproj
@@ -174,6 +174,10 @@
       <Project>{3225de40-e727-4812-860a-f11b3e44f242}</Project>
       <Name>Authentication.Android</Name>
     </ProjectReference>
+    <ProjectReference Include="..\..\DebugLog\DebugLog.csproj">
+      <Project>{d0126eb4-bae9-4d0c-bb49-0fba71cd67ab}</Project>
+      <Name>DebugLog</Name>
+    </ProjectReference>
     <ProjectReference Include="..\..\Map.Android\Map.Android.csproj">
       <Project>{c6358444-ed57-44a4-b76c-ba1c3ce6bff9}</Project>
       <Name>Map.Android</Name>
